--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Thomas Standing</title>
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet" type="text/css">
   <link href="style.css" rel="stylesheet">
   <script type="text/javascript" src="bower_components/shine/dist/shine.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
@@ -24,8 +24,8 @@
       offset: 0.15,
       offsetPow: 1.8,
       blur: 40,
-      blurPow: 1,
-      shadowRGB: new shinejs.Color(0, 0, 0)
+      blurPow: 8,
+      shadowRGB: new shinejs.Color(100, 100, 100)
     });
 
       var shine = new Shine(document.getElementById('shine'), config);
