--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Thomas Standing</title>
+  <!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet" type="text/css"> -->
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet" type="text/css">
   <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="animate.css">
   <script type="text/javascript" src="bower_components/shine/dist/shine.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
   <main>
-    <h1 id="shine" class="name">Thomas Standing</h1>
-
+    <h1 id="shine" class="name animated fadeInUp">Thomas Standing</h1>
     <script type="text/javascript">
       // use new shinejs.Shine(...) if Shine is already defined somewhere else
       // var shine = new shinejs.Shine(document.getElementById('headline'));
@@ -22,9 +23,9 @@
       opacity: 0.15,
       opacityPow: 1.2,
       offset: 0.15,
-      offsetPow: 1.8,
-      blur: 40,
-      blurPow: 8,
+      offsetPow: 1.2,
+      blur: 70,
+      blurPow: 4,
       shadowRGB: new shinejs.Color(100, 100, 100)
     });
 
@@ -38,7 +39,6 @@
 
       window.addEventListener('mousemove', handleMouseMove, false);
     </script>
-  </main>
 </body>
 </html>
 
