--- a/index.html
+++ b/index.html
@@ -1,44 +1,13 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Thomas Standing</title>
-  <!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet" type="text/css"> -->
-  <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet" type="text/css">
-  <link href="style.css" rel="stylesheet">
-  <link rel="stylesheet" href="animate.css">
-  <script type="text/javascript" src="bower_components/shine/dist/shine.min.js"></script>
-  <script type="text/javascript" src="script.js"></script>
-</head>
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="style.css">
+    <title>Shine Demo</title>
+  </head>
 <body>
-  <main>
-    <h1 id="shine" class="name animated fadeInUp">Thomas Standing</h1>
-    <script type="text/javascript">
-      // use new shinejs.Shine(...) if Shine is already defined somewhere else
-      // var shine = new shinejs.Shine(document.getElementById('headline'));
-      var config = new shinejs.Config({
-      numSteps: 5,
-      opacity: 0.15,
-      opacityPow: 1.2,
-      offset: 0.15,
-      offsetPow: 1.2,
-      blur: 70,
-      blurPow: 4,
-      shadowRGB: new shinejs.Color(100, 100, 100)
-    });
-
-      var shine = new Shine(document.getElementById('shine'), config);
-
-      function handleMouseMove(event) {
-        shine.light.position.x = event.clientX;
-        shine.light.position.y = event.clientY;
-        shine.draw();
-      }
-
-      window.addEventListener('mousemove', handleMouseMove, false);
-    </script>
+  <h1 id="thomas">Thomas</h1>
+<script type="text/javascript" src="bower_components/shine/dist/shine.min.js"></script>
+<script src="shine.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
-
