add shine object

--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="style.css">
-    <title>Shine Demo</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- <meta name="viewpor95t" content="initial-scale = 1.0,maximum-scale = 1.0" /> -->
+  <title>Thomas Standing</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="animate.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+</head>
+
 <body>
-  <h1 id="thomas">Thomas</h1>
-<script type="text/javascript" src="bower_components/shine/dist/shine.min.js"></script>
-<script src="shine.js"></script>
-<script type="text/javascript" src="script.js"></script>
-</body>
-</html>
+  <main>
+     <h1 id="headline" class="thomas">Thomas Standing</h1>
+  </main>
+
+  <div class='land' data-background="#FFFFFF">
+    <div id='name' class='animated bounceInUp'>
+      <div class='name1'></div>
+    </div>
+    <h3 class='animated bounceInLeft'>— FULL STACK WEB DEVELOPER —</h3>
+    <div class="icons">
+      <a href="mailto:tomcoap@gmail.com?Subject=Re:%20Portfolio" target="_blank">
+        <img src="images/email_icon.png" alt="email-logo" id='email-logo'>
+      </a>
+      <a href="https://github.com/tomisstanding" target="_blank">
+        <img src="images/github-logo.png" alt="github-logo" id='github-logo'>
+      </a>
+      <a href="https://www.linkedin.com/in/thomas-standing" target="_blank">
+        <img src="images/linkedin_circle.png" alt="linkedin-logo" id='linked-in'>
+      </a>
+    </div>
+    <div id="scroll-div">
+      <p id="scroll">scroll</p>
+      <img id="arrow" src="images/Arrow.jpg">
+    </div>
+  </div>
