update animation to homepage

--- a/index.html
+++ b/index.html
@@ -41,3 +41,27 @@
       <img id="arrow" src="images/Arrow.jpg">
     </div>
   </div>
+
+    <footer>
+    <a href="https://github.com/tomisstanding" target="_blank">
+      <img src="images/github-logo.png" alt="github-logo" id="foot-github">
+    </a>
+    <a href="mailto:tomcoap@gmail.com?Subject=Re:%20Portfolio" target="_blank">
+      <img src="images/email-icon.png" alt="email-logo">
+    </a>
+    <a href="https://www.linkedin.com/in/thomas-standing" target="_blank">
+      <img src="images/linkedin-icon.png" alt="linkedin-logo">
+    </a>
+  </footer>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.js"></script>
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+  <script src="script.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="bower_components/shine/dist/shine.min.js"></script>
+  <script src="shine.js"></script>
+  <script type="text/javascript" src="script.js"></script>
+</body>
+</html>
