--- a/index.html
+++ b/index.html
@@ -27,19 +27,26 @@
     <h3 class='animated bounceInLeft'>— FULL STACK WEB DEVELOPER —</h3>
     <div class="icons">
       <a href="mailto:tomcoap@gmail.com?Subject=Re:%20Portfolio" target="_blank">
-        <img src="images/email_icon.png" alt="email-logo" id='email-logo'>
+        <img src="images/email-icon.png" alt="email-logo" id='email-logo'>
       </a>
       <a href="https://github.com/tomisstanding" target="_blank">
         <img src="images/github-logo.png" alt="github-logo" id='github-logo'>
       </a>
       <a href="https://www.linkedin.com/in/thomas-standing" target="_blank">
-        <img src="images/linkedin_circle.png" alt="linkedin-logo" id='linked-in'>
+        <img src="images/linkedin-icon.png" alt="linkedin-logo" id='linked-in'>
       </a>
     </div>
     <div id="scroll-div">
       <p id="scroll">scroll</p>
       <img id="arrow" src="images/Arrow.jpg">
     </div>
+  </div>
+
+  <div class="aboutme">
+    <p>Hi there, I'm a web developer based out of New York City. I enjoy building things and creative problem solving.</p>
+    <br>
+    <br>
+    <p>Check out some of my projects below.</p>
   </div>
 
     <footer>
