--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
     <p>Check out some of my projects below.</p>
   </div>
 
+  <div class="project-container parallax" id="project1">
+    <div class="content-container" id="content1">
+      <h1>Simon</h1>
+      <p>My spin on the classic electronic memory game Simon</p>
+    </div>
+    <div class="image-container">
+      <img src="images/Simon.jpg" alt="https://pixabay.com">
+    </div>
+  </div>
+
+
     <footer>
     <a href="https://github.com/tomisstanding" target="_blank">
       <img src="images/github-logo.png" alt="github-logo" id="foot-github">
