add simon project info and images

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
      <h1 id="headline" class="thomas">Thomas Standing</h1>
   </main>
 
+<!-- Header -->
   <div class='land' data-background="#FFFFFF">
     <div id='name' class='animated bounceInUp'>
       <div class='name1'></div>
@@ -41,14 +42,18 @@
       <img id="arrow" src="images/Arrow.jpg">
     </div>
   </div>
+<!-- End Header -->
 
+<!-- About me section -->
   <div class="aboutme">
     <p>Hi there, I'm a web developer based out of New York City. I enjoy building things and creative problem solving.</p>
     <br>
     <br>
     <p>Check out some of my projects below.</p>
   </div>
+<!-- End About me -->
 
+<!-- Project 1 - Simon -->
   <div class="project-container parallax" id="project1">
     <div class="content-container" id="content1">
       <h1>Simon</h1>
@@ -56,6 +61,25 @@
     </div>
     <div class="image-container">
       <img src="images/Simon.jpg" alt="https://pixabay.com">
+    </div>
+  </div>
+
+  <div class="project-info" id="project1-info">
+    <div class="technology">
+      <h2 class='details-header'>TECHNOLOGY</h2>
+      <p class='details'>HTML/CSS</p>
+      <p class='details'>Javascript</p>
+    </div>
+
+    <div class="project-img">
+      <img src="images/Simon_UI.png" alt="">
+      <div class="overlay">
+        <p>view code on</p>
+        <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
+        <div class="hidden-links">
+          <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
+        </div>
+      </div>
     </div>
   </div>
 
