add project 2 wikipedia

--- a/index.html
+++ b/index.html
@@ -78,10 +78,57 @@
         <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
         <div class="hidden-links">
           <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
+          <a href="https://tomisstanding.github.io/Simon" target="_blank">visit site</a>
         </div>
       </div>
     </div>
   </div>
+  <!-- End Project 1 - Simon -->
+
+  <!-- Project 2 - Wikipedia -->
+  <div class="project-container parallax" id="project2">
+    <div class="content-container">
+      <h1 class="slide-up">Wiki-pedia</h1>
+      <p class="slide-up">My version of the world renowned online encyclopedia using Node.js and Express. Full crud-ability, the user is able to create, edit and delete posts as they wish.</p>
+    </div>
+    <div class="image-container">
+      <img src="images/wiki_background.jpg" alt="https://pixabay.com">
+    </div>
+  </div>
+
+  <div class="project-info" id="project2-info">
+    <div class="project-img">
+      <img src="images/Wiki.png" alt="">
+      <div class="overlay">
+        <p>view code on</p>
+        <a href="https://github.com/tomisstanding/Wikipedia-Clone" target="_blank">github</a>
+        <div class="hidden-links">
+          <a href="https://github.com/tomisstanding/Wikipedia-Clone" target="_blank">github</a>
+          <a href="https://wiki-pedia.herokuapp.com/wiki" target="_blank">visit site</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-img hidden-image">
+      <img src="images/Wiki2.png" alt="">
+      <div class="overlay">
+        <p>visit site</p>
+        <a href="https://wiki-pedia.herokuapp.com/wiki" target="_blank">here</a>
+      </div>
+    </div>
+
+    <div class="mobile-links">
+      <a href="https://github.com/tomisstanding/Wikipedia-Clone" target="_blank">github</a>
+      <a href="https://wiki-pedia.herokuapp.com/wiki" target="_blank">visit site</a>
+    </div>
+    <div class="technology">
+      <h2 class='details-header'>TECHNOLOGY</h2>
+      <p class='details'>HTML | Bootstrap</p>
+      <p class='details'>Node.js | postgreSQL</p>
+      <p class='details'>Express</p>
+    </div>
+  </div>
+  <!-- End Project 2 - Wikipedia -->
 
 
     <footer>
