add project 3 last call

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
   </div>
 <!-- End About me -->
 
+  <div id="main">
+
 <!-- Project 1 - Simon -->
   <div class="project-container parallax" id="project1">
     <div class="content-container" id="content1">
@@ -124,14 +126,82 @@
     <div class="technology">
       <h2 class='details-header'>TECHNOLOGY</h2>
       <p class='details'>HTML | Bootstrap</p>
-      <p class='details'>Node.js | postgreSQL</p>
+      <p class='details'>Node.js | PostgreSQL</p>
       <p class='details'>Express</p>
     </div>
   </div>
   <!-- End Project 2 - Wikipedia -->
 
+  <!-- Project 3 Last Call -->
+   <div class="project-container parallax" id="project3">
+      <div class="content-container">
+        <h1>Last Call</h1>
+        <p>Last Call has the local pub seeker in mind, offering close by watering hole suggestions with information such as ratings, prices, and the main feature is that it will only display one choice at a time allowing for an easy to use application and enjoyable user experience.</p>
+      </div>
+      <div class="image-container">
+        <img src="images/LastCallUnsplash.jpg" alt="https://unsplash.com">
+      </div>
+    </div>
 
-    <footer>
+    <div class="project-info" id="project3-info">
+      <div class="technology">
+        <h2 class='details-header'>TECHNOLOGY</h2>
+        <p class='details'>React | PostgreSQL</p>
+        <p class='details'>Node.js | Webpack</p>
+        <p class='details'>Yelp Fusion API</p>
+      </div>
+      <div class="mobile-links">
+        <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
+        <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
+      </div>
+      <div class="project-img">
+        <img src="images/upickhp" alt="">
+        <div class="overlay">
+          <div class="hidden-links">
+            <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
+            <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Project 3 Last Call -->
+
+      <!-- Project 3 Last Call -->
+   <div class="project-container parallax" id="project3">
+      <div class="content-container">
+        <h1>Last Call</h1>
+        <p>Last Call has the local pub seeker in mind, offering close by watering hole suggestions with information such as ratings, prices, and the main feature is that it will only display one choice at a time allowing for an easy to use application and enjoyable user experience.</p>
+      </div>
+      <div class="image-container">
+        <img src="images/LastCallUnsplash.jpg" alt="https://unsplash.com">
+      </div>
+    </div>
+
+    <div class="project-info" id="project3-info">
+      <div class="technology">
+        <h2 class='details-header'>TECHNOLOGY</h2>
+        <p class='details'>React | PostgreSQL</p>
+        <p class='details'>Node.js | Webpack</p>
+        <p class='details'>Yelp Fusion API</p>
+      </div>
+      <div class="mobile-links">
+        <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
+        <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
+      </div>
+      <div class="project-img">
+        <img src="images/upickhp" alt="">
+        <div class="overlay">
+          <div class="hidden-links">
+            <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
+            <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Project 4 Upick -->
+  </div>
+<!-- End Main -->
+  <footer>
     <a href="https://github.com/tomisstanding" target="_blank">
       <img src="images/github-logo.png" alt="github-logo" id="foot-github">
     </a>
