add project 4 details and info

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
       </div>
       <div class="project-img">
-        <img src="images/upickhp" alt="">
+        <img src="images/lastcallhp" alt="">
         <div class="overlay">
           <div class="hidden-links">
             <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
@@ -167,33 +167,33 @@
     <!-- End Project 3 Last Call -->
 
       <!-- Project 3 Last Call -->
-   <div class="project-container parallax" id="project3">
+   <div class="project-container parallax" id="project4">
       <div class="content-container">
-        <h1>Last Call</h1>
-        <p>Last Call has the local pub seeker in mind, offering close by watering hole suggestions with information such as ratings, prices, and the main feature is that it will only display one choice at a time allowing for an easy to use application and enjoyable user experience.</p>
+        <h1>Üpick</h1>
+        <p>Üpick is a quick and easy to use local event finder, not limited to only concerts or movies but any keyword you feed it will find the indecisive patron an event to spend with their friends or family. Built for the bunch that never knows what to do or where to go, or perhaps you are new to town or have in-laws from out of town and need something to do, well let Üpick have at it and you will be glad you did!</p>
       </div>
       <div class="image-container">
-        <img src="images/LastCallUnsplash.jpg" alt="https://unsplash.com">
+        <img src="images/upickunsplash.jpg" alt="https://unsplash.com">
       </div>
     </div>
 
-    <div class="project-info" id="project3-info">
+    <div class="project-info" id="project4-info">
       <div class="technology">
         <h2 class='details-header'>TECHNOLOGY</h2>
-        <p class='details'>React | PostgreSQL</p>
+        <p class='details'>React | Express</p>
         <p class='details'>Node.js | Webpack</p>
-        <p class='details'>Yelp Fusion API</p>
+        <p class='details'>Eventful API</p>
       </div>
       <div class="mobile-links">
-        <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
-        <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
+        <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
+        <a href="http://upick-app.herokuapp.com/" target="_blank">visit site</a>
       </div>
       <div class="project-img">
         <img src="images/upickhp" alt="">
         <div class="overlay">
           <div class="hidden-links">
-            <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
-            <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
+            <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
+            <a href="http://upick-app.herokuapp.com/" target="_blank">visit site</a>
           </div>
         </div>
       </div>
