--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </div>
     <!-- End Project 3 Last Call -->
 
-      <!-- Project 3 Last Call -->
+      <!-- Project 4 Upick -->
    <div class="project-container parallax" id="project4">
       <div class="content-container">
         <h1>Üpick</h1>
@@ -201,6 +201,8 @@
     <!-- End Project 4 Upick -->
   </div>
 <!-- End Main -->
+
+<!-- Footer -->
   <footer>
     <a href="https://github.com/tomisstanding" target="_blank">
       <img src="images/github-logo.png" alt="github-logo" id="foot-github">
@@ -212,6 +214,8 @@
       <img src="images/linkedin-icon.png" alt="linkedin-logo">
     </a>
   </footer>
+<!-- End Footer -->
+
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"></script>
