add set timeout to icons in header

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <h3 class='animated bounceInLeft'>— FULL STACK WEB DEVELOPER —</h3>
     <div class="icons">
       <a href="mailto:tomcoap@gmail.com?Subject=Re:%20Portfolio" target="_blank">
-        <img src="images/email-icon.png" alt="email-logo" id='email-logo'>
+        <img src="images/email_icon.png" alt="email-logo" id='email-logo'>
       </a>
       <a href="https://github.com/tomisstanding" target="_blank">
         <img src="images/github-logo.png" alt="github-logo" id='github-logo'>
       </a>
       <a href="https://www.linkedin.com/in/thomas-standing" target="_blank">
-        <img src="images/linkedin-icon.png" alt="linkedin-logo" id='linked-in'>
+        <img src="images/linkedin_circle.png" alt="linkedin-logo" id='linked-in'>
       </a>
     </div>
     <div id="scroll-div">
