fix setTimeout in header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </a>
     </div>
     <div id="scroll-div">
-      <p id="scroll">scroll</p>
+      <p id="scroll">SCROLL</p>
       <img id="arrow" src="images/Arrow.jpg">
     </div>
   </div>
