--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="images/email_icon.png" alt="email-logo" id='email-logo'>
       </a>
       <a href="https://github.com/tomisstanding" target="_blank">
-        <img src="images/github-logo.png" alt="github-logo" id='github-logo'>
+        <img src="images/github.png" alt="github-logo" id='github-logo'>
       </a>
       <a href="https://www.linkedin.com/in/thomas-standing" target="_blank">
         <img src="images/linkedin_circle.png" alt="linkedin-logo" id='linked-in'>
