fix scroll magic parallax scrolling

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <div class="project-container parallax" id="project2">
     <div class="content-container">
       <h1 class="slide-up">Wiki-pedia</h1>
-      <p class="slide-up">My version of the world renowned online encyclopedia using Node.js and Express. Full crud-ability, the user is able to create, edit and delete posts as they wish.</p>
+      <p class="slide-up">My version of the world renowned online encyclopedia using Node.js and Express. Full crud-ability, the user is able to create, edit and delete posts as they wish and are created using a markdown with a node package called Marked.</p>
     </div>
     <div class="image-container">
       <img src="images/wiki_background.jpg" alt="https://pixabay.com">
@@ -125,9 +125,9 @@
     </div>
     <div class="technology">
       <h2 class='details-header'>TECHNOLOGY</h2>
-      <p class='details'>HTML | Bootstrap</p>
-      <p class='details'>Node.js | PostgreSQL</p>
-      <p class='details'>Express</p>
+      <p class='details'>Handlebars.js | Bootstrap</p>
+      <p class='details'>Node.js | Express</p>
+      <p class='details'>PostegreSQL</p>
     </div>
   </div>
   <!-- End Project 2 - Wikipedia -->
@@ -136,7 +136,7 @@
    <div class="project-container parallax" id="project3">
       <div class="content-container">
         <h1>Last Call</h1>
-        <p>Last Call has the local pub seeker in mind, offering close by watering hole suggestions with information such as ratings, prices, and the main feature is that it will only display one choice at a time allowing for an easy to use application and enjoyable user experience.</p>
+        <p>Last Call has the local pub seeker in mind, offering close by watering hole suggestions with information such as ratings, prices, and will only display one choice at a time allowing for users to save their favorite bars they find to their favorites list and more!</p>
       </div>
       <div class="image-container">
         <img src="images/LastCallUnsplash.jpg" alt="https://unsplash.com">
@@ -146,16 +146,16 @@
     <div class="project-info" id="project3-info">
       <div class="technology">
         <h2 class='details-header'>TECHNOLOGY</h2>
-        <p class='details'>React | PostgreSQL</p>
-        <p class='details'>Node.js | Webpack</p>
-        <p class='details'>Yelp Fusion API</p>
+        <p class='details'>React | Node.js</p>
+        <p class='details'>Yelp Fusion API | Webpack</p>
+        <p class='details'>PostgreSQL</p>
       </div>
       <div class="mobile-links">
         <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
         <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
       </div>
       <div class="project-img">
-        <img src="images/lastcallhp" alt="">
+        <img src="images/lastcallhp.png" alt="">
         <div class="overlay">
           <div class="hidden-links">
             <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
@@ -169,7 +169,7 @@
       <!-- Project 4 Upick -->
    <div class="project-container parallax" id="project4">
       <div class="content-container">
-        <h1>Üpick</h1>
+        <img id="upick" src="images/upicklogo.png">
         <p>Üpick is a quick and easy to use local event finder, not limited to only concerts or movies but any keyword you feed it will find the indecisive patron an event to spend with their friends or family. Built for the bunch that never knows what to do or where to go, or perhaps you are new to town or have in-laws from out of town and need something to do, well let Üpick have at it and you will be glad you did!</p>
       </div>
       <div class="image-container">
@@ -189,7 +189,7 @@
         <a href="http://upick-app.herokuapp.com/" target="_blank">visit site</a>
       </div>
       <div class="project-img">
-        <img src="images/upickhp" alt="">
+        <img src="images/upickhp.png" alt="">
         <div class="overlay">
           <div class="hidden-links">
             <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
