add new scroll arrows in header and add animation

--- a/index.html
+++ b/index.html
@@ -27,19 +27,18 @@
     </div>
     <h3 class='animated bounceInLeft'>— FULL STACK WEB DEVELOPER —</h3>
     <div class="icons">
+      <a href="https://www.linkedin.com/in/thomas-standing" target="_blank">
+        <img src="images/linkedin_circle.png" alt="linkedin-logo" id='linked-in'>
+      </a>
       <a href="mailto:tomcoap@gmail.com?Subject=Re:%20Portfolio" target="_blank">
         <img src="images/email_icon.png" alt="email-logo" id='email-logo'>
       </a>
       <a href="https://github.com/tomisstanding" target="_blank">
         <img src="images/github.png" alt="github-logo" id='github-logo'>
       </a>
-      <a href="https://www.linkedin.com/in/thomas-standing" target="_blank">
-        <img src="images/linkedin_circle.png" alt="linkedin-logo" id='linked-in'>
-      </a>
     </div>
     <div id="scroll-div">
-      <p id="scroll">SCROLL</p>
-      <img id="arrow" src="images/Arrow.jpg">
+      <img id="arrow" src="images/down-arrow.png">
     </div>
   </div>
 <!-- End Header -->
