--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="animate.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
@@ -179,7 +180,7 @@
 <!-- Project 4 Upick -->
   <div class="project-container parallax" id="project3">
     <div class="content-container">
-      <img class="slide-up" src="images/upicklogo.png">
+      <img class="slide-up" id="upick" src="images/upicklogo.png">
       <p class="slide-up">Üpick is a quick and easy to use local event finder, not limited to only concerts or movies but any keyword you feed it will find the indecisive patron an event to spend with their friends or family. Built for the bunch that never knows what to do or where to go, or perhaps you are new to town or have in-laws from out of town and need something to do, well let Üpick have at it and you will be glad you did!</p>
     </div>
     <div class="image-container">
@@ -189,71 +190,38 @@
 
   <div class="project-info" id="project4-info">
     <div class="project-img">
-      <img src="images/LastCallUnsplash.jpg" alt="">
-      <div class="overlay">
-        <p>view code on</p>
-        <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
-        <div class="hidden-links">
-          <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
-          <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-img hidden-image">
-      <img src="images/lastcallhp.png" alt="">
-      <div class="overlay">
-        <p>visit site</p>
-        <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">here</a>
-      </div>
-    </div>
-
-    <div class="mobile-links">
-      <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
-      <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
-    </div>
-    <div class="technology">
-      <h2 class='details-header'>TECHNOLOGY</h2>
-      <p class='details'>React | Node.js</p>
-      <p class='details'>Yelp Fusion API | Webpack</p>
-      <p class='details'>PostgreSQL</p>
-    </div>
-  </div>
-<!-- End Project 3 Last Call -->
-
-<!-- Project 4 Upick -->
-  <div class="project-container parallax" id="project4">
-    <div class="content-container">
-      <img id="upick" src="images/upicklogo.png">
-      <p>Üpick is a quick and easy to use local event finder, not limited to only concerts or movies but any keyword you feed it will find the indecisive patron an event to spend with their friends or family. Built for the bunch that never knows what to do or where to go, or perhaps you are new to town or have in-laws from out of town and need something to do, well let Üpick have at it and you will be glad you did!</p>
-    </div>
-    <div class="image-container">
-      <img src="images/upickunsplash.jpg" alt="https://unsplash.com">
-    </div>
-  </div>
-
-  <div class="project-info" id="project4-info">
-    <div class="technology">
-      <h2 class='details-header'>TECHNOLOGY</h2>
-      <p class='details'>React | Express</p>
-      <p class='details'>Node.js | Webpack</p>
-      <p class='details'>Eventful API</p>
-    </div>
-    <div class="mobile-links">
-      <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
-      <a href="http://upick-app.herokuapp.com/" target="_blank">visit site</a>
-    </div>
-    <div class="project-img">
       <img src="images/upickhp.png" alt="">
       <div class="overlay">
+        <p>view code on</p>
+        <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
         <div class="hidden-links">
           <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
           <a href="http://upick-app.herokuapp.com/" target="_blank">visit site</a>
         </div>
       </div>
     </div>
+
+    <div class="project-img hidden-image">
+      <img src="images/upickunsplash.jpg" alt="">
+      <div class="overlay">
+        <p>visit site</p>
+        <a href="http://upick-app.herokuapp.com/" target="_blank">here</a>
+      </div>
+    </div>
+
+    <div class="mobile-links">
+      <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
+      <a href="http://upick-app.herokuapp.com/" target="_blank">visit site</a>
+    </div>
+    <div class="technology">
+      <h2 class='details-header'>TECHNOLOGY</h2>
+      <p class='details'>React | Node.js</p>
+      <p class='details'>Express | Webpack</p>
+      <p class='details'>Eventful API</p>
+    </div>
   </div>
 <!-- End Project 4 Upick -->
+
   </div>
 <!-- End Main -->
 
