fix project 1 github link

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
       <p class='details'>Javascript</p>
     </div>
 
+    <div class="mobile-links">
+      <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
+    </div>
+
     <div class="project-img">
       <img src="images/Simon_UI.png" alt="">
       <div class="overlay">
