fix style errors

--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
       <img src="images/github-logo.png" alt="github-logo" id="foot-github">
     </a>
     <a href="mailto:tomcoap@gmail.com?Subject=Re:%20Portfolio" target="_blank">
-      <img src="images/email-icon.png" alt="email-logo">
+      <img src="images/email-icon.png" alt="email-logo" id="email-logo">
     </a>
     <a href="https://www.linkedin.com/in/thomas-standing" target="_blank">
-      <img src="images/linkedin-icon.png" alt="linkedin-logo">
+      <img src="images/linkedin-icon.png" alt="linkedin-logo" id="linked-in">
     </a>
   </footer>
 <!-- End Footer -->
