add skills section to about me

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
   <div class="aboutme">
     <p>Hi there, I'm a web developer based out of New York City. I enjoy building things and creative problem solving.</p>
     <br>
+    <p>Some of the technologies I use most often,</p>
+    <div class="skills">
+      <img src="images/javascripticon.png">
+      <img src="images/reacticon.png">
+      <img src="images/jqueryicon.png">
+      <img src="images/nodeicon.png">
+      <img src="images/postgresicon.png">
+    </div>
     <br>
     <p>Check out some of my projects below.</p>
   </div>
