add ruby icon to skills

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <img src="images/jqueryicon.png">
       <img src="images/nodeicon.png">
       <img src="images/postgresicon.png">
+      <img src="images/rubyicon.png">
     </div>
     <br>
     <p>Check out some of my projects below.</p>
