add page jump link to arrows

--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
         <img src="images/github.png" alt="github-logo" id='github-logo'>
       </a>
     </div>
-      <img id="arrow" src="images/down-arrow.png">
+      <a href="#aboutme"><img id="arrow" src="images/down-arrow.png"></a>
   </div>
 <!-- End Header -->
 
 <!-- About me section -->
-  <div class="aboutme">
+  <div class="aboutme" id="aboutme">
     <p>Hi there, I'm a web developer based out of New York City. I enjoy building things and creative problem solving.</p>
     <br>
     <p>Some of the technologies I use most often,</p>
     <div class="skills">
-      <img src="images/javascripticon.png">
-      <img src="images/reacticon.png">
-      <img src="images/jqueryicon.png">
-      <img src="images/nodeicon.png">
-      <img src="images/postgresicon.png">
-      <img src="images/rubyicon.png">
+      <img src="images/javascripticon.png" id="javascript">
+      <img src="images/reacticon.png" id="react">
+      <img src="images/jqueryicon.png" id="jquery">
+      <img src="images/nodeicon.png" id="node">
+      <img src="images/postgresicon.png" id="postgres">
+      <img src="images/rubyicon.png" id="ruby">
     </div>
     <br>
     <p>Check out some of my projects below.</p>
