--- a/index.html
+++ b/index.html
@@ -62,47 +62,11 @@
 
   <div id="main">
 
-<!-- Project 1 - Simon -->
-  <div class="project-container parallax" id="project1">
-    <div class="content-container" id="content1">
-      <h1>Simon</h1>
-      <p>My spin on the classic electronic memory game Simon</p>
-    </div>
-    <div class="image-container">
-      <img src="images/Simon.jpg" alt="https://pixabay.com">
-    </div>
-  </div>
-
-  <div class="project-info" id="project1-info">
-    <div class="technology">
-      <h2 class='details-header'>TECHNOLOGY</h2>
-      <p class='details'>HTML/CSS</p>
-      <p class='details'>Javascript</p>
-    </div>
-
-    <div class="mobile-links">
-      <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
-    </div>
-
-    <div class="project-img">
-      <img src="images/Simon_UI.png" alt="">
-      <div class="overlay">
-        <p>view code on</p>
-        <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
-        <div class="hidden-links">
-          <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
-          <a href="https://tomisstanding.github.io/Simon" target="_blank">visit site</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End Project 1 - Simon -->
-
-  <!-- Project 2 - Wikipedia -->
+<!-- Project 2 - Wikipedia -->
   <div class="project-container parallax" id="project2">
     <div class="content-container">
       <h1 class="slide-up">Wiki-pedia</h1>
-      <p class="slide-up">My version of the world renowned online encyclopedia using Node.js and Express. Full crud-ability, the user is able to create, edit and delete posts as they wish and are created using a markdown with a node package called Marked.</p>
+      <p class="slide-up">My version of the world renowned online encyclopedia using Node.js and Express. Full crud-ability, the user is able to create, edit and delete posts as they wish and are created using markdown as text with the Marked npm package.</p>
     </div>
     <div class="image-container">
       <img src="images/wiki_background.jpg" alt="https://pixabay.com">
