--- a/index.html
+++ b/index.html
@@ -58,11 +58,101 @@
     <br>
     <p>Check out some of my projects below.</p>
   </div>
-<!-- End About me -->
+  <!-- End About me -->
 
   <div id="main">
 
-<!-- Project 2 - Wikipedia -->
+  <!-- Upick -->
+  <div class="project-container parallax" id="project3">
+    <div class="content-container">
+      <img class="slide-up" id="upick" src="images/upicklogo.png">
+      <p class="slide-up">Üpick is a quick and easy to use local event finder, not limited to only concerts or movies but any keyword you feed it will find the indecisive patron an event to spend with their friends or family. Built for the bunch that never knows what to do or where to go, or perhaps you are new to town or have in-laws from out of town and need something to do, well let Üpick have at it and you will be glad you did!</p>
+    </div>
+    <div class="image-container">
+      <img src="images/upickunsplash.jpg" alt="https://unsplash.com">
+    </div>
+  </div>
+
+  <div class="project-info" id="project4-info">
+    <div class="project-img">
+      <img src="images/upickhp.png" alt="">
+      <div class="overlay">
+        <p>view code on</p>
+        <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
+        <div class="hidden-links">
+          <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
+          <a href="http://upick-app.herokuapp.com/" target="_blank">visit site</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-img hidden-image">
+      <img src="images/upickunsplash.jpg" alt="">
+      <div class="overlay">
+        <p>visit site</p>
+        <a href="http://upick-app.herokuapp.com/" target="_blank">here</a>
+      </div>
+    </div>
+
+    <div class="mobile-links">
+      <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
+      <a href="http://upick-app.herokuapp.com/" target="_blank">visit site</a>
+    </div>
+    <div class="technology">
+      <h2 class='details-header'>TECHNOLOGY</h2>
+      <p class='details'>React | Node.js</p>
+      <p class='details'>Express | Webpack</p>
+      <p class='details'>Eventful API</p>
+    </div>
+  </div>
+  <!-- End Project 4 Upick -->
+
+  <!-- Project 3 Last Call -->
+  <div class="project-container parallax" id="project3">
+    <div class="content-container">
+      <h1 class="slide-up">Last Call</h1>
+      <p class="slide-up">Last Call has the local pub seeker in mind, offering close by watering hole suggestions with information such as ratings, prices, and will only display one choice at a time allowing for users to save their favorite bars they find to their favorites list and more!</p>
+    </div>
+    <div class="image-container">
+      <img src="images/LastCallUnsplash.jpg" alt="https://unsplash.com">
+    </div>
+  </div>
+
+  <div class="project-info" id="project4-info">
+    <div class="project-img">
+      <img src="images/LastCallUnsplash.jpg" alt="">
+      <div class="overlay">
+        <p>view code on</p>
+        <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
+        <div class="hidden-links">
+          <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
+          <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-img hidden-image">
+      <img src="images/lastcallhp.png" alt="">
+      <div class="overlay">
+        <p>visit site</p>
+        <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">here</a>
+      </div>
+    </div>
+
+    <div class="mobile-links">
+      <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
+      <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
+    </div>
+    <div class="technology">
+      <h2 class='details-header'>TECHNOLOGY</h2>
+      <p class='details'>React | Node.js</p>
+      <p class='details'>Yelp Fusion API | Webpack</p>
+      <p class='details'>PostgreSQL</p>
+    </div>
+  </div>
+  <!-- End Project 3 Last Call -->
+
+ <!-- Project 2 - Wikipedia -->
   <div class="project-container parallax" id="project2">
     <div class="content-container">
       <h1 class="slide-up">Wiki-pedia</h1>
@@ -106,96 +196,6 @@
     </div>
   </div>
 <!-- End Project 2 - Wikipedia -->
-
-<!-- Project 3 Last Call -->
-  <div class="project-container parallax" id="project3">
-    <div class="content-container">
-      <h1 class="slide-up">Last Call</h1>
-      <p class="slide-up">Last Call has the local pub seeker in mind, offering close by watering hole suggestions with information such as ratings, prices, and will only display one choice at a time allowing for users to save their favorite bars they find to their favorites list and more!</p>
-    </div>
-    <div class="image-container">
-      <img src="images/LastCallUnsplash.jpg" alt="https://unsplash.com">
-    </div>
-  </div>
-
-  <div class="project-info" id="project4-info">
-    <div class="project-img">
-      <img src="images/LastCallUnsplash.jpg" alt="">
-      <div class="overlay">
-        <p>view code on</p>
-        <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
-        <div class="hidden-links">
-          <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
-          <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-img hidden-image">
-      <img src="images/lastcallhp.png" alt="">
-      <div class="overlay">
-        <p>visit site</p>
-        <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">here</a>
-      </div>
-    </div>
-
-    <div class="mobile-links">
-      <a href="https://github.com/tomisstanding/Lastcall" target="_blank">github</a>
-      <a href="https://lastcall-ga-wdi.herokuapp.com/" target="_blank">visit site</a>
-    </div>
-    <div class="technology">
-      <h2 class='details-header'>TECHNOLOGY</h2>
-      <p class='details'>React | Node.js</p>
-      <p class='details'>Yelp Fusion API | Webpack</p>
-      <p class='details'>PostgreSQL</p>
-    </div>
-  </div>
-<!-- End Project 3 Last Call -->
-
-<!-- Project 4 Upick -->
-  <div class="project-container parallax" id="project3">
-    <div class="content-container">
-      <img class="slide-up" id="upick" src="images/upicklogo.png">
-      <p class="slide-up">Üpick is a quick and easy to use local event finder, not limited to only concerts or movies but any keyword you feed it will find the indecisive patron an event to spend with their friends or family. Built for the bunch that never knows what to do or where to go, or perhaps you are new to town or have in-laws from out of town and need something to do, well let Üpick have at it and you will be glad you did!</p>
-    </div>
-    <div class="image-container">
-      <img src="images/upickunsplash.jpg" alt="https://unsplash.com">
-    </div>
-  </div>
-
-  <div class="project-info" id="project4-info">
-    <div class="project-img">
-      <img src="images/upickhp.png" alt="">
-      <div class="overlay">
-        <p>view code on</p>
-        <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
-        <div class="hidden-links">
-          <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
-          <a href="http://upick-app.herokuapp.com/" target="_blank">visit site</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="project-img hidden-image">
-      <img src="images/upickunsplash.jpg" alt="">
-      <div class="overlay">
-        <p>visit site</p>
-        <a href="http://upick-app.herokuapp.com/" target="_blank">here</a>
-      </div>
-    </div>
-
-    <div class="mobile-links">
-      <a href="https://github.com/tomisstanding/Upick-frontend" target="_blank">github</a>
-      <a href="http://upick-app.herokuapp.com/" target="_blank">visit site</a>
-    </div>
-    <div class="technology">
-      <h2 class='details-header'>TECHNOLOGY</h2>
-      <p class='details'>React | Node.js</p>
-      <p class='details'>Express | Webpack</p>
-      <p class='details'>Eventful API</p>
-    </div>
-  </div>
-<!-- End Project 4 Upick -->
 
   </div>
 <!-- End Main -->
