fix scroll issue

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     <br>
     <p>Check out some of my projects below.</p>
   </div>
-  <!-- End About me -->
+<!-- End About me -->
 
   <div id="main">
 
-  <!-- Upick -->
+<!-- Upick -->
   <div class="project-container parallax" id="project3">
     <div class="content-container">
       <img class="slide-up" id="upick" src="images/upicklogo.png">
@@ -105,9 +105,9 @@
       <p class='details'>Eventful API</p>
     </div>
   </div>
-  <!-- End Project 4 Upick -->
+  <!-- End Upick -->
 
-  <!-- Project 3 Last Call -->
+  <!-- Last Call -->
   <div class="project-container parallax" id="project3">
     <div class="content-container">
       <h1 class="slide-up">Last Call</h1>
@@ -150,9 +150,10 @@
       <p class='details'>PostgreSQL</p>
     </div>
   </div>
-  <!-- End Project 3 Last Call -->
+  <!-- End Last Call -->
 
- <!-- Project 2 - Wikipedia -->
+
+  <!-- Wikipedia -->
   <div class="project-container parallax" id="project2">
     <div class="content-container">
       <h1 class="slide-up">Wiki-pedia</h1>
@@ -195,7 +196,43 @@
       <p class='details'>PostegreSQL</p>
     </div>
   </div>
-<!-- End Project 2 - Wikipedia -->
+  <!-- End Wikipedia -->
+
+  <!-- Simon -->
+  <div class="project-container parallax" id="project1">
+    <div class="content-container" id="content1">
+      <h1>Simon</h1>
+      <p>My spin on the classic electronic memory game Simon</p>
+    </div>
+    <div class="image-container">
+      <img src="images/Simon.jpg" alt="https://pixabay.com">
+    </div>
+  </div>
+
+  <div class="project-info" id="project1-info">
+    <div class="technology">
+      <h2 class='details-header'>TECHNOLOGY</h2>
+      <p class='details'>HTML/CSS</p>
+      <p class='details'>Javascript</p>
+    </div>
+
+    <div class="mobile-links">
+      <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
+    </div>
+
+    <div class="project-img">
+      <img src="images/Simon_UI.png" alt="">
+      <div class="overlay">
+        <p>view code on</p>
+        <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
+        <div class="hidden-links">
+          <a href="https://github.com/tomisstanding/Simon" target="_blank">github</a>
+          <a href="https://tomisstanding.github.io/Simon" target="_blank">visit site</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Simon -->
 
   </div>
 <!-- End Main -->
