fix header animations

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id='name' class='animated bounceInUp'>
       <div class='name1'></div>
     </div>
-    <h3 class='animated bounceInLeft'>— FULL STACK WEB DEVELOPER —</h3>
+    <h3 class='fsd'>— FULL STACK WEB DEVELOPER —</h3>
     <div class="icons">
       <a href="https://www.linkedin.com/in/thomas-standing" target="_blank">
         <img src="images/linkedin_circle.png" alt="linkedin-logo" id='linked-in'>
