--- a/index.html
+++ b/index.html
@@ -62,6 +62,47 @@
 
   <div id="main">
 
+  <!-- jordanstanding -->
+  <div class="project-container parallax" id="project3">
+    <div class="content-container">
+      <img class="slide-up" id="upick" src="images/upicklogo.png">
+      <h2>JordanStanding.com</h2>
+      <p class="slide-up">Fashion Design Portfolio</p>
+    </div>
+    <div class="image-container">
+      <img src="images/worktable.jpg" alt="https://unsplash.com">
+    </div>
+  </div>
+
+  <div class="project-info" id="project4-info">
+    <div class="project-img">
+      <img src="images/worktable.jpg" alt="">
+      <div class="overlay">
+        <p>view code on</p>
+        <a href="https://github.com/tomisstanding/JordanStanding" target="_blank">github</a>
+        <div class="hidden-links">
+          <a href="https://github.com/tomisstanding/JordanStanding" target="_blank">github</a>
+          <a href="http://jordanstanding.com" target="_blank">visit site</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-img hidden-image">
+      <img src="images/worktable.jpg" alt="">
+      <div class="overlay">
+        <p>visit site</p>
+        <a href="http://jordanstanding.com" target="_blank">here</a>
+      </div>
+    </div>
+
+    <div class="mobile-links">
+      <a href="https://github.com/tomisstanding/JordanStanding" target="_blank">github</a>
+      <a href="http://jordanstanding.com" target="_blank">visit site</a>
+    </div>
+  </div>
+<!-- End jordanstanding -->
+
+
 <!-- Upick -->
   <div class="project-container parallax" id="project3">
     <div class="content-container">
