add rhlwco project

--- a/index.html
+++ b/index.html
@@ -62,12 +62,48 @@
 
   <div id="main">
 
+  <!-- rhlwco -->
+  <div class="project-container parallax" id="project3">
+    <div class="content-container">
+      <img class="slide-up" id="rhlw" src="images/rhlw.png">
+    </div>
+    <div class="image-container">
+      <img src="images/hands.jpg" alt="https://unsplash.com">
+    </div>
+  </div>
+
+  <div class="project-info" id="project4-info">
+    <div class="project-img">
+      <img src="images/wallet.jpg" alt="">
+      <div class="overlay">
+        <p>view code on</p>
+        <a href="https://github.com/tomisstanding/RH-Leather-Works" target="_blank">github</a>
+        <div class="hidden-links">
+          <a href="https://github.com/tomisstanding/RH-Leather-Works" target="_blank">github</a>
+          <a href="http://rhlwco.com" target="_blank">visit site</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-img hidden-image">
+      <img src="images/hands.jpg" alt="">
+      <div class="overlay">
+        <p>visit site</p>
+        <a href="http://rhlwco.com" target="_blank">here</a>
+      </div>
+    </div>
+
+    <div class="mobile-links">
+      <a href="https://github.com/tomisstanding/RH-Leather-Works" target="_blank">github</a>
+      <a href="http://rhlwco.com/" target="_blank">visit site</a>
+    </div>
+  </div>
+  <!-- End rhlwco -->
+
   <!-- jordanstanding -->
   <div class="project-container parallax" id="project3">
     <div class="content-container">
-      <img class="slide-up" id="upick" src="images/upicklogo.png">
-      <h2>JordanStanding.com</h2>
-      <p class="slide-up">Fashion Design Portfolio</p>
+      <img class="slide-up" id="js" src="images/name.png">
     </div>
     <div class="image-container">
       <img src="images/worktable.jpg" alt="https://unsplash.com">
@@ -76,7 +112,7 @@
 
   <div class="project-info" id="project4-info">
     <div class="project-img">
-      <img src="images/worktable.jpg" alt="">
+      <img src="images/PNicon.jpg" alt="">
       <div class="overlay">
         <p>view code on</p>
         <a href="https://github.com/tomisstanding/JordanStanding" target="_blank">github</a>
