add description for js and rhlw projects

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
   <div class="project-container parallax" id="project3">
     <div class="content-container">
       <img class="slide-up" id="rhlw" src="images/rhlw.png">
+      <p class="slide-up">Online shopping platform built for RH Leather Works based out of Austin, Texas.</p>
     </div>
     <div class="image-container">
       <img src="images/hands.jpg" alt="https://unsplash.com">
@@ -75,6 +76,7 @@
   <div class="project-info" id="project4-info">
     <div class="project-img">
       <img src="images/wallet.jpg" alt="">
+
       <div class="overlay">
         <p>view code on</p>
         <a href="https://github.com/tomisstanding/RH-Leather-Works" target="_blank">github</a>
@@ -104,6 +106,7 @@
   <div class="project-container parallax" id="project3">
     <div class="content-container">
       <img class="slide-up" id="js" src="images/name.png">
+      <p class="slide-up">Fashion Designer Portfolio</p>
     </div>
     <div class="image-container">
       <img src="images/worktable.jpg" alt="https://unsplash.com">
