--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- <meta name="viewpor95t" content="initial-scale = 1.0,maximum-scale = 1.0" /> -->
   <title>Thomas Standing</title>
-  <link rel="icon" type="image/png" href="/images/myicon.png">
+  <link rel="icon" type="image/png" href="/images/favicon.ico">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="animate.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
