--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 </head>
 
 <body>
+  <!-- loader -->
+  <div id="overlay">
+    <div id="progstat"></div>
+    <div id="progress"></div>
+    <div class="flex"><img id="loader" src="images/rocket.svg" /></div>
+  </div>
+
   <main>
      <h1 id="headline" class="thomas">Thomas Standing</h1>
   </main>
