--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="animated fadeIn">
+<html>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,14 +18,13 @@
 </head>
 
 <body>
-  <!-- loader -->
-  <div id="overlay">
-    <div id="progstat"></div>
-    <div id="progress"></div>
-    <div class="flex"><img id="loader" src="images/rocket.svg" /></div>
-  </div>
-
   <main>
+    <!-- loader -->
+    <div id="overlay">
+      <div id="progstat"></div>
+      <div id="progress"></div>
+      <div class="flex"><img id="loader" src="images/rocket.svg" /></div>
+    </div>
      <h1 id="headline" class="thomas">Thomas Standing</h1>
   </main>
 
