--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="animated fadeIn">
+<html>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,22 +10,21 @@
   <link rel="icon" type="image/png" href="/images/favicon.ico">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
 <body>
-  <!-- loader -->
-  <div id="overlay">
-    <div id="progstat"></div>
-    <div id="progress"></div>
-    <div class="flex"><img id="loader" src="images/rocket.svg" /></div>
-  </div>
-
   <main>
+    <!-- loader -->
+    <div id="overlay">
+      <div id="progstat"></div>
+      <div id="progress"></div>
+      <div class="flex"><img id="loader" src="images/rocket.svg" /></div>
+    </div>
      <h1 id="headline" class="thomas">Thomas Standing</h1>
   </main>
 
@@ -338,9 +337,8 @@
     </a>
   </footer>
 <!-- End Footer -->
-
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.js"></script>
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <!-- <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
